kubernetes/doc-home-cluster/apps/media/plex/trakt-sync/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: trakt-sync
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: trakt-sync
  egress:
    # plex
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
